--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
     <h1>Senne Van Crombruggen TSM</h1>
   </header>
   <main>
@@ -21,5 +31,7 @@
     </section>
   </main>
   <footer>
-    <p><a href="https://voornaam-achternaam-klasgroep.github.io/Script/" target="_blank">voornaam-achternaam-klasgroep op GitHub</a></p>
+    <p><a href="https://Senne-vancrombruggen-4gta.github.io/Script/" target="_blank">Senne-VanCrombruggen-4gta op GitHub</a></p>
   </footer>
+</body>
+</html>
