--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="senne_vancrombruggen-artikel/" target="_blank">Artikel</a></li>
           <li><a href="senne_vancrombruggen-htmlmatchapp/" target="_blank">Matchapp</a></li>
           <li><a href="Bandsite/" target="_blank">Bandsite</a></li>
-          <li><a href=".." target="_blank">. . .</a></li>
+          <li><a href="Brandshop/" target="_blank">Brandshop</a></li>
         </ul>
       </div>
     </section>
