--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -57,11 +57,17 @@
         </div>
         </div>
 
+        <div class="flex-item">
+            <img src="Static/36150d70-2b76-4173-8789-60d79d5b2c17.webp" alt="productfoto">
+            <div class="flex-container">
+                <div><h3>Nike Air Max 1 '86 Premium</h3><p>Herenschoen</p></div>
+                <p>€ 129,99</p>
+            </div>
+            </div>
+    
+
     </div>
-    <div class="flex-item">
-     ...
-    </div>
-  </div>
+ 
    
 
 </main>
