--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -34,7 +34,7 @@
 
 <main>
    <section id="banner">
-        <div class="videoframe">
+        <div class="">
             <video src="Static/Video's/Video zonder titel ‐ Gemaakt met Clipchamp (2).mp4" autoplay muted
             loop></video>
         </div>
