--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -29,48 +29,71 @@
                 <i class="fa-solid fa-user"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
                 <i class="fa-solid fa-heart"></i>
-        </div>
+            </div>
     </header>
 
-<main>
-   <section id="banner">
-        <div class="">
-            <video src="Static/Video's/Video zonder titel ‐ Gemaakt met Clipchamp (2).mp4" autoplay muted
-            loop></video>
-        </div>
-   </section>
- 
-   <div class="flex-container">
-        <div class="flex-item">
-        <img src="Static/fe58bca7-c430-4d7c-97db-907a94fc25ed (1).webp" alt="productfoto">
-        <div class="flex-container">
-            <div><h3>Nike Air Max 1 Premium</h3><p>Herenschoen</p></div>
-            <p>€ 129,99</p>
-        </div>
-        </div>
+    <main>
+        <section id="banner">
+            <div class="">
+                <video src="Static/Video's/Video zonder titel ‐ Gemaakt met Clipchamp (2).mp4" autoplay muted
+                    loop></video>
+            </div>
+        </section>
 
-        <div class="flex-item">
-        <img src="Static/14f7ed0f-8d50-45c8-a9ad-2bd80dbe40c8.webp" alt="productfoto">
-        <div class="flex-container">
-            <div><h3>Nike Air Force 1 Low x Ambush</h3><p>Herenschoen</p></div>
-            <p>€ 157,99</p>
-        </div>
-        </div>
+        <section id="featured">
+            <div class="flex-container indent">
+                <div class="flex-item">
+                    <img src="Static/fe58bca7-c430-4d7c-97db-907a94fc25ed (1).webp" alt="productfoto">
+                    <div class="flex-container">
+                        <div>
+                            <h3>Nike Air Max 1 Premium</h3>
+                            <p>Herenschoen</p>
+                        </div>
+                        <p>€ 129,99</p>
+                    </div>
+                </div>
 
-        <div class="flex-item">
-        <img src="Static/36150d70-2b76-4173-8789-60d79d5b2c17.webp" alt="productfoto">
-        <div class="flex-container">
-            <div><h3>Nike Air Max 1 '86 Premium</h3><p>Herenschoen</p></div>
-            <p>€ 129,99</p>
-        </div>
-        </div>
-    
+                <div class="flex-item">
+                    <img src="Static/14f7ed0f-8d50-45c8-a9ad-2bd80dbe40c8.webp" alt="productfoto">
+                    <div class="flex-container">
+                        <div>
+                            <h3>Nike Air Force 1 Low x Ambush</h3>
+                            <p>Herenschoen</p>
+                        </div>
+                        <p>€ 157,99</p>
+                    </div>
+                </div>
 
-    </div>
- 
-   
+                <div class="flex-item">
+                    <img src="Static/36150d70-2b76-4173-8789-60d79d5b2c17.webp" alt="productfoto">
+                    <div class="flex-container">
+                        <div>
+                            <h3>Nike Air Max 1 '86 Premium</h3>
+                            <p>Herenschoen</p>
+                        </div>
+                        <p>€ 129,99</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-</main>
+        <section id="categorien">
+            <div class="flex-container ">
+                <figure>
+                    <img src="Static/officiële-nike-website.jpg" alt="categorie">
+                    <figcaption>
+                        <span>Dames</span>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="Static/Man Categorie.webp" alt="categorie">
+                    <figcaption>
+                        <span>Heren</span>
+                    </figcaption>
+                </figure>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
