--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -80,7 +80,7 @@
         <section id="categorien">
             <div class="flex-container ">
                 <figure>
-                    <img src="Static/officiële-nike-website.jpg" alt="categorie">
+                    <img src="Static/Vrouw Categorie.webp" alt="categorie">
                     <figcaption>
                         <span>Dames</span>
                     </figcaption>
@@ -91,9 +91,62 @@
                         <span>Heren</span>
                     </figcaption>
                 </figure>
+                <figure>
+                    <img src="Static/Kids Categorie.webp" alt="categorie">
+                    <figcaption>
+                        <span>Kids</span>
+                    </figcaption>
+                </figure>
+            </div>
+        </section>
+
+        <section id="call2action">
+            <div class="flex-container bgc-highlights">
+                <div class="flex-item">
+                    Nike membership
+                </div>
+                <div class="flex-item bgd-Nikemembership"></div>
             </div>
         </section>
     </main>
+
+    <footer>
+        <section>
+            <div class="flex-container">
+                <ul>
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Bestelstatus</a></li>
+                    <li><a href="#">Verzending en levering</a></li>
+                    <li><a href="#">Retourzendingen</a></li>
+                    <li><a href="#">Betaalmethodes</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Over Nike</a></li>
+                    <li><a href="#">Nieuws</a></li>
+                    <li><a href="#">Werken bij Nike</a></li>
+                    <li><a href="#">Investeerders</a></li>
+                    <li><a href="#">Duurzaamheid</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Join us</a></li>
+                    <li><a href="#">Nike App</a></li>
+                    <li><a href="#">Nike Run Club</a></li>
+                    <li><a href="#">Nike Training Club</a></li>
+                    <li><a href="#">SNKRS</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">...</a></li>
+                </ul>
+                <div>
+                    <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-youtube"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
