--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -100,19 +100,30 @@
             </div>
         </section>
 
-        <section id="call2action">
+        <section>
             <div class="flex-container bgc-highlights">
-                <div class="flex-item">
-                    Nike membership
-                </div>
-                <div class="flex-item bgd-Nikemembership"></div>
+            <div class="flex-item">
+                Nike Membership
+            </div>
+            <div class="flex-item bgd-joinus"></div>
             </div>
         </section>
+
+
     </main>
 
     <footer>
         <section>
             <div class="flex-container">
+                <ul>
+                    <li><a href="#">Cadeaubonnen</a></li>
+                    <li><a href="#">Zoek een store</a></li>
+                    <li><a href="#">Nike journal</a></li>
+                    <li><a href="#">Word member</a></li>
+                    <li><a href="#">Studentenkorting</a></li>
+                    <li><a href="#">Feedback</a></li>
+                    <li><a href="#">Promotiecodes</a></li>
+                </ul>
                 <ul>
                     <li><a href="#">Help</a></li>
                     <li><a href="#">Bestelstatus</a></li>
