--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -79,19 +79,19 @@
 
         <section id="categorien">
             <div class="flex-container ">
-                <figure>
+                <figure class="flex-item">
                     <img src="Static/Vrouw Categorie.webp" alt="categorie">
                     <figcaption>
                         <span>Dames</span>
                     </figcaption>
                 </figure>
-                <figure>
+                <figure class="flex-item">
                     <img src="Static/Man Categorie.webp" alt="categorie">
                     <figcaption>
                         <span>Heren</span>
                     </figcaption>
                 </figure>
-                <figure>
+                <figure class="flex-item">
                     <img src="Static/Kids Categorie.webp" alt="categorie">
                     <figcaption>
                         <span>Kids</span>
@@ -102,10 +102,15 @@
 
         <section>
             <div class="flex-container bgc-highlights">
-            <div class="flex-item">
-                Nike Membership
-            </div>
-            <div class="flex-item bgd-joinus"></div>
+                <div class="flex-item">
+                   <h4> Nike Membership</h4>
+                   <p>Onze missie is:
+
+                    om iedere atleet* ter wereld inspiratie en innovatie te bieden.
+                    
+                    *Iedereen die een lichaam heeft, is een atleet.</p>
+                </div>
+                <div class="flex-item bgd-joinus"></div>
             </div>
         </section>
 
@@ -146,9 +151,7 @@
                     <li><a href="#">Nike Training Club</a></li>
                     <li><a href="#">SNKRS</a></li>
                 </ul>
-                <ul>
-                    <li><a href="#">...</a></li>
-                </ul>
+
                 <div>
                     <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
                     <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
